# CIoTA-Collaborative-IoT-Anomaly-detection-via-Blockchain

./: CMakeLists.txt  LICENSE  LICENSE.txt  README.md  default_conf.ini  default_conf.ini.copy  install_matrixssl.sh  runTestSuite.sh
Demo/: PibrellaBlockchainListener.cpp  PibrellaBlockchainListener.h  agent_demo.cpp
DemoApplication/: LogServer  LogServer.cpp  Makefile  mongoose.c  mongoose.h
DemoApplication/web_root/: index.shtml
headers/AnomalyDetection/: AnomalyDetectionModel.h  ExtendedAnomalyControlServer.h  ExtendedAnomalyListener.h  README.md
headers/Blockchain/: Block.h  BlockRecord.h  Blockchain.h  BlockchainApplication.h  BlockchainListener.h  README.md
headers/CIoTA/: LogObserverListener.h  ObserverUtilities.h  PrinterObserverListener.h  README.md  runAgent.h  runControlServer.h
headers/CIoTA/core/: Agent.h  BaseAgent.h  BaseCIoTABlockchainApplication.h  CIoTABlockchainApplication.h  CIoTA_Definitions.h  ModelUtilities.h  ObserverCIoTABlockchainApplication.h
headers/CppUtils/: AES_Wrapper.h  CircularBuffer.h  CryptoLibrary.h  Cursor.h  Exceptions.h  INIReader.h  LockedPointer.h  Logger.h  MemBuffer.h  README.md  SHA256.h  SerializableBoundedQueue.h  ThreadBarrier.h  ThreadWrapper.h  Utils.h  ini.h  minilzo.h
headers/CppUtils/minilzo/: lzoconf.h  lzodefs.h
headers/ExecutableUtils/: CIoTA_Agent.h  CIoTA_Server.h
headers/JumpTracer/: JumpTracer.h  JumpTracerUtilities.h  README.md  Tracer.h
headers/NetworkingUtils/: BroadcastServer.h  CompressionLibrary.h  MessageFragmentationServer.h  MulticastServerDescriptor.h  README.md  SimpleProtocol.h
headers/NetworkingUtils/SimpleTcpProtocol/: ProtocolException.h  README.md  SimpleTcpProtocol.h  SimpleTcpProtocolClient.h  SimpleTcpProtocolServer.h
src/AnomalyDetection/: ExtendedAnomalyControlServer.cpp  ExtendedAnomalyListener.cpp
src/Blockchain/: BlockRecord.cpp
src/ControlServer/: CIoTA_CLI_Server.cpp  CIoTA_GUI_Server.cpp
src/ControlServer/GUI/: mainwindow.cpp  mainwindow.h  mainwindow.ui
src/CppUtils/: Cursor.cpp  INIReader.cpp  Logger.cpp  MemBuffer.cpp  SHA256.cpp  ThreadBarrier.cpp  Utils.cpp  ini.cpp  minilzo.cpp
src/ExecutableUtils/: CIoTA_Agent.cpp  CIoTA_Server.cpp  agent.cpp  cliServer.cpp  guiServer.cpp
src/JumpTracer/: JumpTracer.cpp  JumpTracerUtilities.cpp  Tracer.cpp
src/NetworkingUtils/: CompressionLibrary.cpp  MulticastServerDescriptor.cpp  SimpleTcpProtocolClient.cpp
test/: MockAgent.cpp  MockGUIServer.cpp  MockServer.cpp  TEST.h  testNetwork.cpp  testSuite.cpp
test/Mocks/: BlockchainTestUtils.cpp  BlockchainTestUtils.h  NetworkingUtilTests.cpp  NetworkingUtilTests.h  SimulatorFileDescriptorWrapper.cpp  SimulatorFileDescriptorWrapper.h
test/NetworkTest/: NetworkTestMethods.h  multicastTest.cpp  tcpProtocolTest.cpp
test/Simulator/: MockJumpTableSource.cpp  MockJumpTableSource.h  Simulator.cpp  Simulator.h
test/TestSuite1/: TestSuite1.cpp  TestSuite1.h
test/TestSuite1/Blockchain/: PartialBlockTest.cpp  PartialBlockTest.h  receiveChainTest.cpp  receiveChainTest.h
test/TestSuite1/CIoTA/: CIoTA_TestAgent.cpp  CIoTA_TestAgent.h  CIoTA_TestApplication.cpp  CIoTA_TestApplication.h
test/TestSuite1/JumpTracer/: JumpTracerTest.cpp  JumpTracerTest.h
